# Open4D

./: .gitignore  README.md  __init__.py  pyproject.toml
examples/: play_draco_pointcloud_o4d.py  play_mesh_o4d.py  play_poincloud_o4d.py
modules/unity_decoder/: README.md
modules/unity_decoder/TVMCUnity/Helper_Converter_Scripts/: subdivider.py
modules/unity_decoder/TVMCUnity/Unity Files/Scripts/: NonEncodedObjPlayback.cs
open4d.egg-info/: SOURCES.txt  top_level.txt
open4d/core/: README.md
open4d/core/tvmc/: Dockerfile  LICENSE.md  README.md  environment.yml
open4d/core/tvmc/TVMC/: extract_reference_mesh.py  get_displacements.py  get_reference_center.py  get_transformation.py  objective_results_all.py  objective_results_basic.py
open4d/core/tvmc/arap-volume-tracking/: README.md  arap.sln
open4d/core/tvmc/arap-volume-tracking/Backup/: arap.sln
open4d/core/tvmc/arap-volume-tracking/Client/: Client.csproj
open4d/core/tvmc/arap-volume-tracking/Framework/: packages.config
open4d/core/tvmc/tvm-editing/: LICENSE  readme.md  test.bat
open4d/core/tvmc/tvm-editing/Documentation/: demo.md  documentation.md
open4d/core/tvmc/tvm-editing/TVMEditor/: TVMEditor.csproj
open4d/io/: README.md  o4d_draco_pointcloud_io.py  o4d_mesh_io.py  o4d_pointcloud_io.py
open4d/metrics/: README.md
open4d/modules/tvmc/: run_pipeline.sh
open4d/modules/tvmc/TVMC/: evaluation.py
open4d/modules/tvmc/arap-volume-tracking/: .gitignore  LICENSE  UpgradeLog.htm
open4d/modules/tvmc/arap-volume-tracking/Client/: .editorconfig  Config.cs  Mode.cs  Program.cs
open4d/modules/tvmc/arap-volume-tracking/Framework/: Framework.csproj
open4d/modules/tvmc/tvm-editing/: .gitignore  TVMEditor.sln
open4d/modules/unity_decoder/TVMCUnity/CPP_Backend/: CMakeLists.txt
open4d/modules/unity_decoder/TVMCUnity/CPP_Backend/src/core/: PlaybackManager.cpp  TVMDecoder.cpp  TVMDecoder_Extern.cpp  TVMUtil.cpp  TVMUtil.h
open4d/modules/unity_decoder/TVMCUnity/CPP_Backend/src/io/: MatrixIO.h
open4d/modules/unity_decoder/TVMCUnity/CPP_Backend/src/mesh/: SimpleMesh.cpp  SimpleMesh.h
open4d/open4d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
open4d/player/: draco_pointcloud.py  mesh.py  pointcloud.py
open4d/tools/: create_o4d_draco_pointcloud.py  create_o4d_mesh.py  create_o4d_pointcloud.py
(+141 files in other folders)
