[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open4d"
version = "0.1.0"
dependencies = ["numpy"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["open4d*"]
exclude = ["data*", "apps*", "cmake*", "docker*", "pc_frames*"]
